@@ -35,6 +35,11 @@
 
 #ifndef HAVE_RRESVPORT_AF
 
+#include <sys/types.h>
+#include <sys/socket.h>
+
+#include <netinet/in.h>
+
 #include <errno.h>
 #include <stdlib.h>
 #include <string.h>
